traefik/traefikService.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
  name: wrinkled-narwhal-traefik
  namespace: default
  resourceVersion: "997"
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 30879
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 32703
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: traefik
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
