traefik/traefikServiceDashboard.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
  name: wrinkled-narwhal-traefik-dashboard
  namespace: default
  resourceVersion: "2832"
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30095
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: traefik
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
